class_file/snapshots/custom-abstracts-basic_abstract-BasicAbstractMain$Cat.class.snap
---
source: class_file/src/lib.rs
expression: display
---
class abstracts.basic_abstract.BasicAbstractMain$Cat extends abstracts.basic_abstract.BasicAbstractMain$Animal
  minor version: 0
  major version: 68
  flags: (0x0020) ACC_SUPER
  this_class: #9                       //abstracts/basic_abstract/BasicAbstractMain$Cat
  super_class: #2                      //abstracts/basic_abstract/BasicAbstractMain$Animal
  interfaces: 0, fields: 0, methods: 2, attributes: 3
Constant pool:
   #1 = Methodref          #2.#3            // abstracts/basic_abstract/BasicAbstractMain$Animal."<init>":()V
   #2 = Class              #4               // abstracts/basic_abstract/BasicAbstractMain$Animal
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               abstracts/basic_abstract/BasicAbstractMain$Animal
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = String             #8               // Meow
   #8 = Utf8               Meow
   #9 = Class              #10              // abstracts/basic_abstract/BasicAbstractMain$Cat
  #10 = Utf8               abstracts/basic_abstract/BasicAbstractMain$Cat
  #11 = Utf8               Code
  #12 = Utf8               LineNumberTable
  #13 = Utf8               LocalVariableTable
  #14 = Utf8               this
  #15 = Utf8               Labstracts/basic_abstract/BasicAbstractMain$Cat;
  #16 = Utf8               get_sound
  #17 = Utf8               ()Ljava/lang/String;
  #18 = Utf8               SourceFile
  #19 = Utf8               BasicAbstractMain.java
  #20 = Utf8               NestHost
  #21 = Class              #22              // abstracts/basic_abstract/BasicAbstractMain
  #22 = Utf8               abstracts/basic_abstract/BasicAbstractMain
  #23 = Utf8               InnerClasses
  #24 = Utf8               Animal
  #25 = Utf8               Cat
{
  abstracts.basic_abstract.BasicAbstractMain$Cat();
    descriptor: ()V
    flags: (0x0000) 
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method abstracts/basic_abstract/BasicAbstractMain$Animal."<init>":()V
         4: return                  
      LineNumberTable:
        line 8: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Labstracts/basic_abstract/BasicAbstractMain$Cat;
  
  java.lang.String get_sound();
    descriptor: ()Ljava/lang/String;
    flags: (0x0000) 
    Code: 
      stack=1, locals=1, args_size=1
         0: ldc           #7                  // String Meow
         2: areturn                 
      LineNumberTable:
        line 11: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        3     0  this   Labstracts/basic_abstract/BasicAbstractMain$Cat;
}
SourceFile: "BasicAbstractMain.java"
NestHost: class abstracts/basic_abstract/BasicAbstractMain
InnerClasses:
  static abstract #24= #2 of #21;             // Animal=class abstracts/basic_abstract/BasicAbstractMain$Animal of class abstracts/basic_abstract/BasicAbstractMain
  static #25= #9 of #21;                      // Cat=class abstracts/basic_abstract/BasicAbstractMain$Cat of class abstracts/basic_abstract/BasicAbstractMain
