class_file/snapshots/custom-abstracts-basic_abstract-BasicAbstractMain.class.snap
---
source: class_file/src/lib.rs
expression: display
---
public class abstracts.basic_abstract.BasicAbstractMain 
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #17                      //abstracts/basic_abstract/BasicAbstractMain
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 0, methods: 2, attributes: 3
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Class              #8               // abstracts/basic_abstract/BasicAbstractMain$Cat
   #8 = Utf8               abstracts/basic_abstract/BasicAbstractMain$Cat
   #9 = Methodref          #7.#3            // abstracts/basic_abstract/BasicAbstractMain$Cat."<init>":()V
  #10 = Methodref          #11.#12          // abstracts/basic_abstract/BasicAbstractMain$Animal.get_sound:()Ljava/lang/String;
  #11 = Class              #13              // abstracts/basic_abstract/BasicAbstractMain$Animal
  #12 = NameAndType        #14:#15          // get_sound:()Ljava/lang/String;
  #13 = Utf8               abstracts/basic_abstract/BasicAbstractMain$Animal
  #14 = Utf8               get_sound
  #15 = Utf8               ()Ljava/lang/String;
  #16 = Methodref          #7.#12           // abstracts/basic_abstract/BasicAbstractMain$Cat.get_sound:()Ljava/lang/String;
  #17 = Class              #18              // abstracts/basic_abstract/BasicAbstractMain
  #18 = Utf8               abstracts/basic_abstract/BasicAbstractMain
  #19 = Utf8               Code
  #20 = Utf8               LineNumberTable
  #21 = Utf8               LocalVariableTable
  #22 = Utf8               this
  #23 = Utf8               Labstracts/basic_abstract/BasicAbstractMain;
  #24 = Utf8               main
  #25 = Utf8               ([Ljava/lang/String;)V
  #26 = Utf8               args
  #27 = Utf8               [Ljava/lang/String;
  #28 = Utf8               abstractInstance
  #29 = Utf8               Labstracts/basic_abstract/BasicAbstractMain$Animal;
  #30 = Utf8               childInstance
  #31 = Utf8               Labstracts/basic_abstract/BasicAbstractMain$Cat;
  #32 = Utf8               abstractInstanceRes
  #33 = Utf8               Ljava/lang/String;
  #34 = Utf8               childInstanceRes
  #35 = Utf8               SourceFile
  #36 = Utf8               BasicAbstractMain.java
  #37 = Utf8               NestMembers
  #38 = Utf8               InnerClasses
  #39 = Utf8               Cat
  #40 = Utf8               Animal
{
  public abstracts.basic_abstract.BasicAbstractMain();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 3: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Labstracts/basic_abstract/BasicAbstractMain;
  
  public static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=2, locals=5, args_size=1
         0: new           #7                  // class abstracts/basic_abstract/BasicAbstractMain$Cat
         3: dup                     
         4: invokespecial #9                  // Method abstracts/basic_abstract/BasicAbstractMain$Cat."<init>":()V
         7: astore_1                
         8: new           #7                  // class abstracts/basic_abstract/BasicAbstractMain$Cat
        11: dup                     
        12: invokespecial #9                  // Method abstracts/basic_abstract/BasicAbstractMain$Cat."<init>":()V
        15: astore_2                
        16: aload_1                 
        17: invokevirtual #10                 // Method abstracts/basic_abstract/BasicAbstractMain$Animal.get_sound:()Ljava/lang/String;
        20: astore_3                
        21: aload_2                 
        22: invokevirtual #16                 // Method abstracts/basic_abstract/BasicAbstractMain$Cat.get_sound:()Ljava/lang/String;
        25: astore        4                 
        27: return                  
      LineNumberTable:
        line 16: 0
        line 17: 8
        line 18: 16
        line 19: 21
        line 20: 27
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0       28     0  args   [Ljava/lang/String;
           8       20     1  abstractInstance Labstracts/basic_abstract/BasicAbstractMain$Animal;
          16       12     2  childInstance Labstracts/basic_abstract/BasicAbstractMain$Cat;
          21        7     3  abstractInstanceRes Ljava/lang/String;
          27        1     4  childInstanceRes Ljava/lang/String;
}
SourceFile: "BasicAbstractMain.java"
NestMembers:
  abstracts/basic_abstract/BasicAbstractMain$Cat
  abstracts/basic_abstract/BasicAbstractMain$Animal
InnerClasses:
  static #39= #7 of #17;                      // Cat=class abstracts/basic_abstract/BasicAbstractMain$Cat of class abstracts/basic_abstract/BasicAbstractMain
  static abstract #40= #11 of #17;            // Animal=class abstracts/basic_abstract/BasicAbstractMain$Animal of class abstracts/basic_abstract/BasicAbstractMain
