class_file/snapshots/custom-arrays-clone_char_array-CloneCharArrayMain.class.snap
---
source: class_file/src/lib.rs
expression: display
---
public class arrays.clone_char_array.CloneCharArrayMain 
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #13                      //arrays/clone_char_array/CloneCharArrayMain
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 0, methods: 2, attributes: 1
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Methodref          #8.#9            // "[C".clone:()Ljava/lang/Object;
   #8 = Class              #10              // "[C"
   #9 = NameAndType        #11:#12          // clone:()Ljava/lang/Object;
  #10 = Utf8               [C
  #11 = Utf8               clone
  #12 = Utf8               ()Ljava/lang/Object;
  #13 = Class              #14              // arrays/clone_char_array/CloneCharArrayMain
  #14 = Utf8               arrays/clone_char_array/CloneCharArrayMain
  #15 = Utf8               Code
  #16 = Utf8               LineNumberTable
  #17 = Utf8               LocalVariableTable
  #18 = Utf8               this
  #19 = Utf8               Larrays/clone_char_array/CloneCharArrayMain;
  #20 = Utf8               main
  #21 = Utf8               ([Ljava/lang/String;)V
  #22 = Utf8               args
  #23 = Utf8               [Ljava/lang/String;
  #24 = Utf8               arr
  #25 = Utf8               cloned
  #26 = Utf8               SourceFile
  #27 = Utf8               CloneCharArrayMain.java
{
  public arrays.clone_char_array.CloneCharArrayMain();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 3: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Larrays/clone_char_array/CloneCharArrayMain;
  
  public static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=4, locals=3, args_size=1
         0: iconst_5                
         1: newarray      char              
         3: dup                     
         4: iconst_0                
         5: bipush        104               
         7: castore                 
         8: dup                     
         9: iconst_1                
        10: bipush        101               
        12: castore                 
        13: dup                     
        14: iconst_2                
        15: bipush        108               
        17: castore                 
        18: dup                     
        19: iconst_3                
        20: bipush        108               
        22: castore                 
        23: dup                     
        24: iconst_4                
        25: bipush        111               
        27: castore                 
        28: astore_1                
        29: aload_1                 
        30: invokevirtual #7                  // Method "[C".clone:()Ljava/lang/Object;
        33: checkcast     #8                  // class "[C"
        36: astore_2                
        37: return                  
      LineNumberTable:
        line 5: 0
        line 6: 29
        line 7: 37
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0       38     0  args   [Ljava/lang/String;
          29        9     1  arr    [C
          37        1     2  cloned [C
}
SourceFile: "CloneCharArrayMain.java"
