class_file/snapshots/custom-arrays-reference_array-ReferenceArrayMain$ReferenceClass.class.snap
---
source: class_file/src/lib.rs
expression: display
---
class arrays.reference_array.ReferenceArrayMain$ReferenceClass 
  minor version: 0
  major version: 68
  flags: (0x0020) ACC_SUPER
  this_class: #8                       //arrays/reference_array/ReferenceArrayMain$ReferenceClass
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 1, methods: 1, attributes: 3
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Fieldref           #8.#9            // arrays/reference_array/ReferenceArrayMain$ReferenceClass.value:I
   #8 = Class              #10              // arrays/reference_array/ReferenceArrayMain$ReferenceClass
   #9 = NameAndType        #11:#12          // value:I
  #10 = Utf8               arrays/reference_array/ReferenceArrayMain$ReferenceClass
  #11 = Utf8               value
  #12 = Utf8               I
  #13 = Utf8               (I)V
  #14 = Utf8               Code
  #15 = Utf8               LineNumberTable
  #16 = Utf8               LocalVariableTable
  #17 = Utf8               this
  #18 = Utf8               Larrays/reference_array/ReferenceArrayMain$ReferenceClass;
  #19 = Utf8               SourceFile
  #20 = Utf8               ReferenceArrayMain.java
  #21 = Utf8               NestHost
  #22 = Class              #23              // arrays/reference_array/ReferenceArrayMain
  #23 = Utf8               arrays/reference_array/ReferenceArrayMain
  #24 = Utf8               InnerClasses
  #25 = Utf8               ReferenceClass
{
  int value;
    descriptor: I
    flags: (0x0000) 
  
  arrays.reference_array.ReferenceArrayMain$ReferenceClass(int);
    descriptor: (I)V
    flags: (0x0000) 
    Code: 
      stack=2, locals=2, args_size=2
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: aload_0                 
         5: iload_1                 
         6: putfield      #7                  // Field value:I
         9: return                  
      LineNumberTable:
        line 6: 0
        line 7: 4
        line 8: 9
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0       10     0  this   Larrays/reference_array/ReferenceArrayMain$ReferenceClass;
           0       10     1  value  I
}
SourceFile: "ReferenceArrayMain.java"
NestHost: class arrays/reference_array/ReferenceArrayMain
InnerClasses:
  static #25= #8 of #22;                      // ReferenceClass=class arrays/reference_array/ReferenceArrayMain$ReferenceClass of class arrays/reference_array/ReferenceArrayMain
