class_file/snapshots/custom-arrays-reference_array-ReferenceArrayMain.class.snap
---
source: class_file/src/lib.rs
expression: display
---
public class arrays.reference_array.ReferenceArrayMain 
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #12                      //arrays/reference_array/ReferenceArrayMain
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 0, methods: 2, attributes: 3
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Class              #8               // arrays/reference_array/ReferenceArrayMain$ReferenceClass
   #8 = Utf8               arrays/reference_array/ReferenceArrayMain$ReferenceClass
   #9 = Methodref          #7.#10           // arrays/reference_array/ReferenceArrayMain$ReferenceClass."<init>":(I)V
  #10 = NameAndType        #5:#11           // "<init>":(I)V
  #11 = Utf8               (I)V
  #12 = Class              #13              // arrays/reference_array/ReferenceArrayMain
  #13 = Utf8               arrays/reference_array/ReferenceArrayMain
  #14 = Utf8               Code
  #15 = Utf8               LineNumberTable
  #16 = Utf8               LocalVariableTable
  #17 = Utf8               this
  #18 = Utf8               Larrays/reference_array/ReferenceArrayMain;
  #19 = Utf8               main
  #20 = Utf8               ([Ljava/lang/String;)V
  #21 = Utf8               args
  #22 = Utf8               [Ljava/lang/String;
  #23 = Utf8               ref1
  #24 = Utf8               Larrays/reference_array/ReferenceArrayMain$ReferenceClass;
  #25 = Utf8               ref2
  #26 = Utf8               ref3
  #27 = Utf8               refArray
  #28 = Utf8               [Larrays/reference_array/ReferenceArrayMain$ReferenceClass;
  #29 = Utf8               arr_len
  #30 = Utf8               I
  #31 = Utf8               SourceFile
  #32 = Utf8               ReferenceArrayMain.java
  #33 = Utf8               NestMembers
  #34 = Utf8               InnerClasses
  #35 = Utf8               ReferenceClass
{
  public arrays.reference_array.ReferenceArrayMain();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 3: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Larrays/reference_array/ReferenceArrayMain;
  
  public static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=4, locals=6, args_size=1
         0: new           #7                  // class arrays/reference_array/ReferenceArrayMain$ReferenceClass
         3: dup                     
         4: iconst_1                
         5: invokespecial #9                  // Method arrays/reference_array/ReferenceArrayMain$ReferenceClass."<init>":(I)V
         8: astore_1                
         9: new           #7                  // class arrays/reference_array/ReferenceArrayMain$ReferenceClass
        12: dup                     
        13: iconst_2                
        14: invokespecial #9                  // Method arrays/reference_array/ReferenceArrayMain$ReferenceClass."<init>":(I)V
        17: astore_2                
        18: new           #7                  // class arrays/reference_array/ReferenceArrayMain$ReferenceClass
        21: dup                     
        22: iconst_3                
        23: invokespecial #9                  // Method arrays/reference_array/ReferenceArrayMain$ReferenceClass."<init>":(I)V
        26: astore_3                
        27: iconst_3                
        28: anewarray     #7                  // class arrays/reference_array/ReferenceArrayMain$ReferenceClass
        31: dup                     
        32: iconst_0                
        33: aload_1                 
        34: aastore                 
        35: dup                     
        36: iconst_1                
        37: aload_2                 
        38: aastore                 
        39: dup                     
        40: iconst_2                
        41: aload_3                 
        42: aastore                 
        43: astore        4                 
        45: aload         4                 
        47: arraylength             
        48: istore        5                 
        50: return                  
      LineNumberTable:
        line 11: 0
        line 12: 9
        line 13: 18
        line 14: 27
        line 15: 45
        line 16: 50
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0       51     0  args   [Ljava/lang/String;
           9       42     1  ref1   Larrays/reference_array/ReferenceArrayMain$ReferenceClass;
          18       33     2  ref2   Larrays/reference_array/ReferenceArrayMain$ReferenceClass;
          27       24     3  ref3   Larrays/reference_array/ReferenceArrayMain$ReferenceClass;
          45        6     4  refArray [Larrays/reference_array/ReferenceArrayMain$ReferenceClass;
          50        1     5  arr_len I
}
SourceFile: "ReferenceArrayMain.java"
NestMembers:
  arrays/reference_array/ReferenceArrayMain$ReferenceClass
InnerClasses:
  static #35= #7 of #12;                      // ReferenceClass=class arrays/reference_array/ReferenceArrayMain$ReferenceClass of class arrays/reference_array/ReferenceArrayMain
