class_file/snapshots/custom-arrays-system_array_copy_primitives-SystemArrayCopyPrimitivesMain.class.snap
---
source: class_file/src/lib.rs
expression: display
---
public class arrays.system_array_copy_primitives.SystemArrayCopyPrimitivesMain 
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #13                      //arrays/system_array_copy_primitives/SystemArrayCopyPrimitivesMain
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 0, methods: 2, attributes: 1
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Methodref          #8.#9            // java/lang/System.arraycopy:(Ljava/lang/Object;ILjava/lang/Object;II)V
   #8 = Class              #10              // java/lang/System
   #9 = NameAndType        #11:#12          // arraycopy:(Ljava/lang/Object;ILjava/lang/Object;II)V
  #10 = Utf8               java/lang/System
  #11 = Utf8               arraycopy
  #12 = Utf8               (Ljava/lang/Object;ILjava/lang/Object;II)V
  #13 = Class              #14              // arrays/system_array_copy_primitives/SystemArrayCopyPrimitivesMain
  #14 = Utf8               arrays/system_array_copy_primitives/SystemArrayCopyPrimitivesMain
  #15 = Utf8               Code
  #16 = Utf8               LineNumberTable
  #17 = Utf8               LocalVariableTable
  #18 = Utf8               this
  #19 = Utf8               Larrays/system_array_copy_primitives/SystemArrayCopyPrimitivesMain;
  #20 = Utf8               main
  #21 = Utf8               ([Ljava/lang/String;)V
  #22 = Utf8               args
  #23 = Utf8               [Ljava/lang/String;
  #24 = Utf8               src
  #25 = Utf8               [I
  #26 = Utf8               dest
  #27 = Utf8               SourceFile
  #28 = Utf8               SystemArrayCopyPrimitivesMain.java
{
  public arrays.system_array_copy_primitives.SystemArrayCopyPrimitivesMain();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 3: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Larrays/system_array_copy_primitives/SystemArrayCopyPrimitivesMain;
  
  public static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=5, locals=3, args_size=1
         0: iconst_5                
         1: newarray      int               
         3: dup                     
         4: iconst_0                
         5: iconst_1                
         6: iastore                 
         7: dup                     
         8: iconst_1                
         9: iconst_2                
        10: iastore                 
        11: dup                     
        12: iconst_2                
        13: iconst_3                
        14: iastore                 
        15: dup                     
        16: iconst_3                
        17: iconst_4                
        18: iastore                 
        19: dup                     
        20: iconst_4                
        21: iconst_5                
        22: iastore                 
        23: astore_1                
        24: iconst_5                
        25: newarray      int               
        27: astore_2                
        28: aload_1                 
        29: iconst_1                
        30: aload_2                 
        31: iconst_0                
        32: iconst_3                
        33: invokestatic  #7                  // Method java/lang/System.arraycopy:(Ljava/lang/Object;ILjava/lang/Object;II)V
        36: return                  
      LineNumberTable:
        line 5: 0
        line 6: 24
        line 8: 28
        line 9: 36
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0       37     0  args   [Ljava/lang/String;
          24       13     1  src    [I
          28        9     2  dest   [I
}
SourceFile: "SystemArrayCopyPrimitivesMain.java"
